fixes for deprecated constructors